Update class names, add styling to fix flex & overflow break issue
Update comment-text class name to comment-actions

Add display: flex, justify-content: space-between, align-items: center to comment-actions class

Add margin-right to comment-user-edit class
Add margin-left to comment-user-delete class

Add a min-width to comment-text class to fix clashing issue with display: flex and overflow/word-wrap not working

Update all previous comment-text related class names to comment-actions

--- a/client/src/Stylings/Comment.css
+++ b/client/src/Stylings/Comment.css
@@ -2,28 +2,43 @@
    margin-top: 12.5px;
 }
 
-.comment-text{
+.comment-actions {
    border: 2px solid rgb(220, 220, 220);
    border-radius: 100px;
-   padding: 12.5px 50px;
-
-   word-wrap: break-word;
+   padding: 12.5px 30px;
 
    text-align: center;
    color: #5E5E5E;
+
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.comment-text:hover, .comment-text:focus-visible {
+.comment-user-edit {
+   margin-right: 10px;
+}
+
+.comment-user-delete {
+   margin-left: 10px;
+}
+
+.comment-text {
+   min-width: 10%;
+   overflow-wrap: break-word;
+}
+
+.comment-actions:hover, .comment-actions:focus-visible {
    border: 2px solid rgb(0, 173, 76);
 }
 
-.comment-text-edit {
+.comment-actions-edit {
    color: rgb(0, 173, 76);
    font-weight: 600;
    letter-spacing: 0.025rem;
 }
 
-.comment-text-edit input {
+.comment-actions-edit input {
    width: 100%;
    line-height: 1.5rem;
 
@@ -36,11 +51,11 @@
    text-align: center;
 }
 
-.comment-text-edit input:hover, .comment-text-edit input:focus-visible {
+.comment-actions-edit input:hover, .comment-actions-edit input:focus-visible {
    background-color: #AFD3B5;
 }
 
-.comment-text-edit button {
+.comment-actions-edit button {
    border: 1.5px solid rgba(0, 70, 30, 0.65);
    border-radius: 25px;
    padding: 3px 5px;
@@ -52,11 +67,11 @@
    cursor: pointer;
 }
 
-.comment-text-edit button:active {
+.comment-actions-edit button:active {
    transform: scale(.95);
 }
 
-.comment-text-edit button:hover, .comment-text-edit button:focus-visible {
+.comment-actions-edit button:hover, .comment-actions-edit button:focus-visible {
    color: rgb(0, 70, 30);
 }
 
@@ -75,7 +90,7 @@
    margin-left: 3px;
 }
 
-.comment-meta-data p, .comment-date-time {
+.comment-meta-data p, .comment-date-time em {
    display: flex;
    justify-content: flex-end;
    align-items: center;
